--- a/Css/style.css
+++ b/Css/style.css
@@ -3,6 +3,112 @@
 /*rgba(255, 255, 255, 0) transparent*/
 /*Letra roboto não está a funcionar ;-; por isso até resposta postetior ira ser arial*/
 
+/*Test*/
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: black;
+  font-size: 12px;
+  /* padding: 8px 12px; */
+  position: absolute;
+  top: 0;
+  font-weight: bold;
+  font-family: arial;
+}
+
+/* Caption text */
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+}
+
+
+img.hover-shadow {
+  transition: 0.3s;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+
+
+
+/*End Test*/
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -101,6 +207,11 @@ li {
   list-style: none;
 }
 
+.navMenu
+{
+  z-index: 2;
+}
+
 .navMenu,
 li,
 a:hover {
@@ -134,6 +245,7 @@ a:hover {
   margin-left: 1%;
   width: 77%;
   text-align: justify;
+  background-color: #c1f0c1;
 }
 
 /*Caroussel*/
@@ -145,8 +257,7 @@ a:hover {
   position: relative;
 }
 
-.marcass::before,
-.marcass::after {
+.marcass::before,.marcass::after {
   width: 100px;
   height: 100px;
   background-color: rgba(255, 255, 255, 0);
@@ -165,13 +276,13 @@ a:hover {
   transform: rotateZ(180dge);
 }
 
-.marcass .marcas {
+.marcass,.marcas {
   display: flex;
   width: calc(100px * 26); /*Bar size*/
   animation: scroll 40s infinite linear; /*Velocidade*/
 }
 
-.marcass .marca img {
+.marcass,.marca img {
   width: auto;
   height: 100px;
   display: flex;
@@ -216,7 +327,7 @@ a:hover {
 /*gallery*/
 
 .gallery {
-  width: 110%;
+  width: 100%;
 }
 
 .photo {
@@ -226,6 +337,24 @@ a:hover {
   display: inline-block;
   width: 33%;
   height: 300px;
+  overflow: hidden;  
+}
+
+.photo:hover img{
+  transform: scale(1.5);
+  transition: transform 1s ease;
+  
+}
+
+.photoWH
+{
+  width:100%;
+  height:100%;
+}
+
+.photoWHV
+{
+  width: 100%;
 }
 
 h1 {
