--- a/Css/style.css
+++ b/Css/style.css
@@ -10,13 +10,13 @@
   display: none;
   position: fixed;
   z-index: 1;
-  padding-top: 100px;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   overflow: auto;
   background-color: black;
+  padding-top: 1%;
 }
 
 /* Modal Content */
@@ -32,7 +32,6 @@
 .close {
   color: white;
   position: absolute;
-  top: 10px;
   right: 25px;
   font-size: 35px;
   font-weight: bold;
@@ -77,13 +76,13 @@
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: black;
-  font-size: 12px;
-  /* padding: 8px 12px; */
+  color: white;
+  font-size: 20px;
   position: absolute;
   top: 0;
   font-weight: bold;
   font-family: arial;
+  margin-left: -5%;
 }
 
 /* Caption text */
@@ -93,18 +92,6 @@
   padding: 2px 16px;
   color: white;
 }
-
-
-img.hover-shadow {
-  transition: 0.3s;
-}
-
-.hover-shadow:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-
-
 
 
 /*End Test*/
