--- a/Css/style.css
+++ b/Css/style.css
@@ -13,7 +13,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   overflow: auto;
   background-color: black;
   padding-top: 1%;
@@ -23,8 +23,7 @@
 .modal-content {
   position: relative;
   margin: auto;
-  padding: 0;
-  width: 90%;
+  width: 100%;
   max-width: 1200px;
 }
 
@@ -84,15 +83,6 @@
   font-family: arial;
   margin-left: -5%;
 }
-
-/* Caption text */
-.caption-container {
-  text-align: center;
-  background-color: black;
-  padding: 2px 16px;
-  color: white;
-}
-
 
 /*End Test*/
 
@@ -330,7 +320,6 @@ a:hover {
 .photo:hover img{
   transform: scale(1.5);
   transition: transform 1s ease;
-  
 }
 
 .photoWH
@@ -343,6 +332,8 @@ a:hover {
 {
   width: 100%;
 }
+
+/**/
 
 h1 {
   font-size: 1.5em;
