--- a/Css/style.css
+++ b/Css/style.css
@@ -103,7 +103,7 @@ li {
 
 .navMenu
 {
-  z-index: 2;
+  z-index: 5;
 }
 
 .navMenu,
@@ -170,13 +170,13 @@ a:hover {
   transform: rotateZ(180dge);
 }
 
-.marcass,.marcas {
+.marcass .marcas {
   display: flex;
   width: calc(100px * 26); /*Bar size*/
   animation: scroll 40s infinite linear; /*Velocidade*/
 }
 
-.marcass,.marca img {
+.marcass .marca img {
   width: auto;
   height: 100px;
   display: flex;
@@ -191,6 +191,7 @@ a:hover {
     transform: translateX(calc(-100px * 13));
   }
 }
+
 
 /*End Caroussel*/
 
@@ -234,7 +235,7 @@ a:hover {
   overflow: hidden;  
 }
 
-.photo:hover img{
+.photo:hover .photoWH{
   transform: scale(1.5);
   transition: transform 1s ease;
 }
@@ -248,6 +249,7 @@ a:hover {
 .photoWHV
 {
   width: 100%;
+  height: 100%;
 }
 
 /*ImageView*/
@@ -259,15 +261,17 @@ a:hover {
   left: 0;
   top: 0;
   width: 100%;
+  height: 100%;
   overflow: auto;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.836);
 }
 
 /* Modal Content */
 .modal-content {
   position: relative;
   margin: auto;
-  width: 100%;
+  padding: 0;
+  width: 90%;
   max-width: 1200px;
 }
 
@@ -278,6 +282,10 @@ a:hover {
   right: 25px;
   font-size: 35px;
   font-weight: bold;
+  position: -webkit-sticky;
+  position: sticky;
+  float: right;
+  top: 0;
 }
 
 .close:hover,
@@ -309,12 +317,14 @@ a:hover {
 .next {
   right: 0;
   border-radius: 200px;
+  margin-right: -4%;
 }
 
 /* Position the "prev button" to the left */
 .prev {
   left: 0;
   border-radius: 200px;
+  margin-left: -4%;
 }
 
 /* On hover, add a black background color with a little bit see-through */
