--- a/Css/style.css
+++ b/Css/style.css
@@ -226,9 +226,9 @@ a:hover {
 }
 
 .photo {
-  border-radius: 10px;
-  border: 2px white solid;
-  background-color: black;
+  /* border-radius: 10px;
+  border: 2px white solid; 
+  background-color: black;*/
   display: inline-block;
   width: 33%;
   height: 300px;
@@ -352,10 +352,10 @@ footer {
 }
 
 .footerBottom {
-  padding-left: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 20px;
+  padding-left: 1%;
+  padding-top: 1%;
+  padding-bottom: 2%;
+  padding-right: 1%;
   position: absolute;
   width: 100%;
   background-color: #333;
@@ -364,25 +364,46 @@ footer {
 
 .wheretofindusFooter {
   float: left;
+  font-size: 14px;
+  padding-left: 10%;
 }
 
 .contactusFooter {
-  padding-left: 1%;
   float: left;
+  margin-left: 20%;
+  font-size: 14px;
 }
 
 .openFooter {
-  float: left;
+  float: right;
   padding-left: 1%;
+  font-size: 14px;
+  padding-right: 10%;
+}
+
+.openFooterI {
+  float: right;
+  font-size: 14px;
 }
 
 .copyright{
-  padding-top: 4%;
-  float: right;
+  position: absolute;
+  float: left;
+  font-size: 11px;
+  color: gray;
+  bottom: 0;
+  margin-left: 20%;
+  padding-bottom: 1%;
 }
 
 .desendesign{
-  float: right;
+  position: absolute;
+  float: left;
+  font-size: 11px;
+  color: gray;
+  bottom: 0;
+  margin-left: 50%;
+  padding-bottom: 1%;
 }
 
 /* form */
