--- a/Css/style.css
+++ b/Css/style.css
@@ -361,8 +361,6 @@ footer {
 .wheretofindusFooter {
   float: left;
   font-size: 14px;
-  padding-left: 10%;
-  padding-bottom: 10%;
 }
 
 .contactusFooter {
@@ -390,7 +388,7 @@ footer {
   color: gray;
   bottom: 0;
   margin-left: 20%;
-  padding-bottom: 2%;
+  padding-bottom: 1%;
 }
 
 .desendesign{
@@ -941,7 +939,7 @@ textarea.form-control {
   .footerBottom {
     padding-left: 1%;
     padding-top: 1%;
-    padding-bottom: 1%;
+    padding-bottom: 7%;
     padding-right: 1%;
     position: absolute;
     width: 100%;
@@ -953,11 +951,12 @@ textarea.form-control {
     float: left;
     font-size: 13px;
     padding-left: 0%;
+    padding-bottom: 3%;
   }
   
   .contactusFooter {
     float: left;
-    margin-left: 1.5%;
+    margin-left: 2%;
     font-size: 13px;
   }
   
@@ -979,7 +978,7 @@ textarea.form-control {
     font-size: 11px;
     color: gray;
     bottom: 0;
-    padding-bottom: 1%;
+    padding-bottom: 5%;
     padding-top: 1%;
   }
   
@@ -989,8 +988,8 @@ textarea.form-control {
     font-size: 11px;
     color: gray;
     bottom: 0;
-    margin-left: 50%;
-    padding-bottom: 1%;
+    padding-top: 50%;
+    margin-left: 0;
   }
 
   /* form */
