--- a/Css/style.css
+++ b/Css/style.css
@@ -824,8 +824,8 @@ textarea.form-control {
     position: absolute;
   }
 
-  .rightBtn {
-  }
+  /* .rightBtn {
+  } */
 
   .leftBtn {
     visibility: hidden;
