--- a/Css/style.css
+++ b/Css/style.css
@@ -847,6 +847,7 @@ textarea.form-control {
 
   .menuText {
     border-bottom: 2px solid #32cd32;
+    visibility: hidden;
   }
 
   .menuText:hover {
@@ -855,6 +856,7 @@ textarea.form-control {
   }
 
   nav {
+    padding-top: 10%;
     background-color: #32cd32;
     position: -webkit-sticky;
     position: sticky;
@@ -941,6 +943,10 @@ textarea.form-control {
   }
 
   /* footer */
+
+  a{
+    font-size: 11px;
+  }
 
   .footerBottom {
     padding-left: 1%;
