--- a/Css/style.css
+++ b/Css/style.css
@@ -94,6 +94,7 @@ nav {
   text-align: center;
   border-bottom: 1px solid white;
   z-index: 10;
+  visibility: visible;
 }
 
 li {
@@ -251,6 +252,7 @@ a:hover {
 
 /*ImageView*/
 /* The Modal (background) */
+
 .modal {
   display: none;
   position: fixed;
@@ -264,6 +266,7 @@ a:hover {
 }
 
 /* Modal Content */
+
 .modal-content {
   position: relative;
   margin: auto;
@@ -273,6 +276,7 @@ a:hover {
 }
 
 /* The Close Button */
+
 .close {
   color: white;
   position: absolute;
@@ -293,6 +297,7 @@ a:hover {
 }
 
 /* Next & previous buttons */
+
 .prev,
 .next {
   cursor: pointer;
@@ -311,6 +316,7 @@ a:hover {
 }
 
 /* Position the "next button" to the right */
+
 .next {
   right: 0;
   border-radius: 200px;
@@ -318,6 +324,7 @@ a:hover {
 }
 
 /* Position the "prev button" to the left */
+
 .prev {
   left: 0;
   border-radius: 200px;
@@ -325,6 +332,7 @@ a:hover {
 }
 
 /* On hover, add a black background color with a little bit see-through */
+
 .prev:hover,
 .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
@@ -490,6 +498,7 @@ textarea.form-control {
 /*End contact Section */
 
 @media only screen and (max-width: 992px) {
+
   /*Tablet*/
 
   /* header */
@@ -550,6 +559,7 @@ textarea.form-control {
     font-weight: 500;
     padding-top: 1%;
     padding-bottom: 1%;
+    visibility: visible;
   }
 
   .menuText:hover {
@@ -563,6 +573,7 @@ textarea.form-control {
     position: sticky;
     top: 0;
     text-align: center;
+    visibility: visible;
   }
 
   li {
@@ -581,6 +592,7 @@ textarea.form-control {
   }
 
   /* main */
+
   .slideshow {
     width: 100%;
   }
@@ -595,7 +607,7 @@ textarea.form-control {
     position: absolute;
   }
 
-  /*********Marcas da pagina marcas**********/
+  /*Marcas da pagina marcas*/
 
   .marcasI {
     visibility: hidden;
@@ -623,7 +635,7 @@ textarea.form-control {
     position: inherit;
   }
 
-  /******************************************/
+  /*Fim Marcas da pagina marcas*/
 
   .welcome {
     width: 98%;
@@ -652,7 +664,7 @@ textarea.form-control {
     font-size: large;
   }
 
-  /* footer */
+  /*footer*/
 
   .footerBottom {
     padding-left: 1%;
@@ -710,7 +722,7 @@ textarea.form-control {
     padding-bottom: 1%;
   }
 
-  /* form */
+  /*form*/
 
   .mapa {
     height: none;
@@ -847,7 +859,7 @@ textarea.form-control {
 
   .menuText {
     border-bottom: 2px solid #32cd32;
-    visibility: hidden;
+    visibility: visible;
   }
 
   .menuText:hover {
@@ -863,7 +875,7 @@ textarea.form-control {
     top: 0;
     text-align: center;
     position: absolute;
-    visibility: hidden;
+    visibility: visible;
   }
 
   li {
