--- a/Css/style.css
+++ b/Css/style.css
@@ -131,7 +131,7 @@ a:hover {
 .news {
   float: right;
   width: 23%;
-} 
+}
 
 .welcome {
   margin-left: 1%;
@@ -149,7 +149,8 @@ a:hover {
   position: relative;
 }
 
-.marcass::before,.marcass::after {
+.marcass::before,
+.marcass::after {
   width: 100px;
   height: 100px;
   background-color: rgba(255, 255, 255, 0);
@@ -190,7 +191,6 @@ a:hover {
   }
 }
 
-
 /*End Caroussel*/
 
 /*Marcas da pagina marcas*/
@@ -230,22 +230,20 @@ a:hover {
   display: inline-block;
   width: 33%;
   height: 300px;
-  overflow: hidden;  
+  overflow: hidden;
 }
 
-.photo:hover .photoWH{
+.photo:hover .photoWH {
   transform: scale(1.5);
   transition: transform 0.5s ease;
 }
 
-.photoWH
-{
-  width:100%;
-  height:100%;
+.photoWH {
+  width: 100%;
+  height: 100%;
 }
 
-.photoWHV
-{
+.photoWHV {
   width: 100%;
   height: 100%;
 }
@@ -390,7 +388,7 @@ footer {
   font-size: 14px;
 }
 
-.copyright{
+.copyright {
   position: absolute;
   float: left;
   font-size: 11px;
@@ -400,7 +398,7 @@ footer {
   padding-bottom: 1%;
 }
 
-.desendesign{
+.desendesign {
   position: absolute;
   float: left;
   font-size: 11px;
@@ -498,7 +496,6 @@ textarea.form-control {
 /*End contact Section */
 
 @media only screen and (max-width: 992px) {
-
   /*Tablet*/
 
   /* header */
@@ -528,7 +525,7 @@ textarea.form-control {
 
   .weatherWidget {
     visibility: hidden;
-    position:absolute;
+    position: absolute;
     left: -99999px;
   }
 
@@ -676,33 +673,33 @@ textarea.form-control {
     background-color: #333;
     color: #fff;
   }
-  
+
   .wheretofindusFooter {
     float: left;
     font-size: 14px;
     padding-left: 0%;
   }
-  
+
   .contactusFooter {
     float: left;
     margin-left: 10%;
     font-size: 14px;
     padding-bottom: 4%;
   }
-  
+
   .openFooter {
     float: right;
     padding-left: 1%;
     font-size: 14px;
     padding-right: 0%;
   }
-  
+
   .openFooterI {
     float: right;
     font-size: 14px;
   }
-  
-  .copyright{
+
+  .copyright {
     position: absolute;
     float: left;
     font-size: 11px;
@@ -711,8 +708,8 @@ textarea.form-control {
     margin-left: 3%;
     padding-bottom: 1%;
   }
-  
-  .desendesign{
+
+  .desendesign {
     position: absolute;
     float: left;
     font-size: 11px;
@@ -810,7 +807,7 @@ textarea.form-control {
 
   .weatherWidgetTablet {
     visibility: hidden;
-    position:absolute;
+    position: absolute;
     left: -99999px;
   }
 
@@ -830,18 +827,20 @@ textarea.form-control {
     border: none;
     float: left;
     visibility: visible;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
     font-size: 50px;
     position: absolute;
     z-index: 900;
+    margin-left: 45%;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    margin-top: -50%;
   }
 
-  /* .rightBtn {
+  /* .downBtn {
   } */
 
-  .leftBtn {
+  .upBtn {
     visibility: hidden;
   }
 
@@ -859,7 +858,10 @@ textarea.form-control {
 
   .menuText {
     border-bottom: 2px solid #32cd32;
-    visibility: visible;
+    visibility: hidden;
+    position: -webkit-sticky;
+    position: sticky;
+    top:0;
   }
 
   .menuText:hover {
@@ -875,7 +877,11 @@ textarea.form-control {
     top: 0;
     text-align: center;
     position: absolute;
-    visibility: visible;
+    visibility: hidden;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    margin-top: -61%;
   }
 
   li {
@@ -949,14 +955,14 @@ textarea.form-control {
     font-size: large;
   }
 
-  .marcass{
+  .marcass {
     margin-top: -10%;
     padding-bottom: 25%;
   }
 
   /* footer */
 
-  a{
+  a {
     font-size: 11px;
   }
 
@@ -970,33 +976,33 @@ textarea.form-control {
     background-color: #333;
     color: #fff;
   }
-  
+
   .wheretofindusFooter {
     float: left;
     font-size: 13px;
     padding-left: 0%;
     padding-bottom: 3%;
   }
-  
+
   .contactusFooter {
     float: left;
     margin-left: 1%;
     font-size: 13px;
   }
-  
+
   .openFooter {
     float: right;
     padding-left: 1%;
     font-size: 13px;
     padding-right: 0%;
   }
-  
+
   .openFooterI {
     float: right;
     font-size: 13px;
   }
-  
-  .copyright{
+
+  .copyright {
     position: absolute;
     float: left;
     font-size: 11px;
@@ -1006,8 +1012,8 @@ textarea.form-control {
     padding-top: 1%;
     margin-left: 0;
   }
-  
-  .desendesign{
+
+  .desendesign {
     position: absolute;
     float: left;
     font-size: 11px;
