--- a/Css/style.css
+++ b/Css/style.css
@@ -196,7 +196,9 @@ a:hover {
 
 .marcasGallery {
   width:100%;
-  background-color: black;
+  /* background-color: black; */
+  position: relative;
+  float: left;
 }
 
 .marcaGallery {
@@ -241,7 +243,7 @@ a:hover {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 999999999999;
   left: 0;
   top: 0;
   width: 100%;
@@ -272,6 +274,7 @@ a:hover {
   position: sticky;
   float: right;
   top: 0;
+  z-index: 999999999;
 }
 
 .close:hover,
@@ -298,6 +301,7 @@ a:hover {
   border-radius: 0 3px 3px 0;
   user-select: none;
   -webkit-user-select: none;
+  z-index: 999999999999;
 }
 
 /* Position the "next button" to the right */
@@ -590,6 +594,97 @@ textarea.form-control {
     visibility: hidden;
     position: absolute;
   }
+
+  /*ImageView*/
+/* The Modal (background) */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 999999999999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.836);
+}
+
+/* Modal Content */
+
+.modal-content {
+  position: relative;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+}
+
+/* The Close Button */
+
+.close {
+  color: white;
+  position: absolute;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+  position: -webkit-sticky;
+  position: sticky;
+  float: right;
+  top: 0;
+  z-index: 999999999;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+  z-index: 999999999999;
+}
+
+/* Position the "next button" to the right */
+
+.next {
+  right: 0;
+  border-radius: 200px;
+  margin-right: -4%;
+}
+
+/* Position the "prev button" to the left */
+
+.prev {
+  left: 0;
+  border-radius: 200px;
+  margin-left: -4%;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+/*End ImageView*/
 
   /*Marcas da pagina marcas*/
 
