--- a/Css/style.css
+++ b/Css/style.css
@@ -118,19 +118,19 @@ a:hover {
 }
 
 .search {
-  display: inline-block;
-  position: -webkit-sticky;
+  position: absolute;
+  /* position: -webkit-sticky;
   position: sticky;
-  top: 0;
-  z-index: 999999999;
-  padding-top: 20px;
+  top: 0; */
+  /* z-index: 999999999; */
+  margin-top: 10%;
+  float: left;
 }
 
 .searchMG {
   padding-left: 5px;
   padding-top: 5px;
   padding-right: 5px;
-  display: inline-block;
   font-size: 30px;
   vertical-align: middle;
   position: -webkit-sticky;
@@ -257,11 +257,8 @@ a:hover {
 }
 
 .photo {
-  /* border-radius: 10px;
-  border: 2px white solid; 
-  background-color: black;*/
-  display: inline-block;
   width: 33%;
+  float: left;
   height: 300px;
   overflow: hidden;
 }
@@ -392,12 +389,12 @@ footer {
 .footerBottom {
   padding-left: 1%;
   padding-top: 1%;
-  padding-bottom: 2%;
+  padding-bottom: 3%;
   padding-right: 1%;
-  position: absolute;
   width: 100%;
   background-color: #333;
   color: #fff;
+  float: left;
 }
 
 .wheretofindusFooter {
@@ -424,23 +421,21 @@ footer {
 }
 
 .copyright {
-  position: absolute;
   float: left;
   font-size: 11px;
   color: gray;
-  bottom: 0;
-  margin-left: 20%;
-  padding-bottom: 1%;
+  position: absolute;
+  padding-top: 7%;
+  padding-left: 30%;
 }
 
 .desendesign {
-  position: absolute;
-  float: left;
+  float: right;
   font-size: 11px;
   color: gray;
-  bottom: 0;
-  margin-left: 50%;
-  padding-bottom: 1%;
+  position: absolute;
+  padding-top: 7%;
+  padding-left: 80%;
 }
 
 /* form */
@@ -771,9 +766,8 @@ textarea.form-control {
   }
 
   .photo {
-    /* background-color: black; */
     display: inline-block;
-    width: 32.7%;
+    width: 50%;
     height: 200px;
   }
 
@@ -789,13 +783,13 @@ textarea.form-control {
 
   .footerBottom {
     padding-left: 1%;
-    padding-top: 1%;
-    padding-bottom: 2%;
-    padding-right: 1%;
-    position: absolute;
-    width: 100%;
-    background-color: #333;
-    color: #fff;
+  padding-top: 1%;
+  padding-bottom: 3%;
+  padding-right: 1%;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  float: left;
   }
 
   .wheretofindusFooter {
@@ -824,23 +818,21 @@ textarea.form-control {
   }
 
   .copyright {
-    position: absolute;
     float: left;
     font-size: 11px;
     color: gray;
-    bottom: 0;
-    margin-left: 3%;
-    padding-bottom: 1%;
+    position: absolute;
+    padding-top: 14%;
+    padding-left: 5%;
   }
 
   .desendesign {
-    position: absolute;
-    float: left;
+    float: right;
     font-size: 11px;
     color: gray;
-    bottom: 0;
-    margin-left: 62%;
-    padding-bottom: 1%;
+    position: absolute;
+    padding-top: 14%;
+    padding-left: 65%;
   }
 
   /*form*/
@@ -1091,12 +1083,12 @@ textarea.form-control {
   .footerBottom {
     padding-left: 1%;
     padding-top: 1%;
-    padding-bottom: 7%;
+    padding-bottom: 8%;
     padding-right: 1%;
-    position: absolute;
     width: 100%;
     background-color: #333;
     color: #fff;
+    float: left;
   }
 
   .wheretofindusFooter {
@@ -1108,7 +1100,7 @@ textarea.form-control {
 
   .contactusFooter {
     float: left;
-    margin-left: 1%;
+    margin-left: 2%;
     font-size: 13px;
   }
 
@@ -1125,24 +1117,21 @@ textarea.form-control {
   }
 
   .copyright {
-    position: absolute;
     float: left;
     font-size: 11px;
     color: gray;
-    bottom: 0;
-    padding-bottom: 5%;
-    padding-top: 1%;
-    margin-left: 0;
+    position: absolute;
+    padding-top: 18%;
+    padding-left: 8%;
   }
 
   .desendesign {
-    position: absolute;
     float: left;
     font-size: 11px;
     color: gray;
-    bottom: 0;
-    padding-top: 50%;
-    margin-left: 0;
+    position: absolute;
+    padding-top: 22%;
+    padding-left: 25%;
   }
 
   /* form */
