--- a/Css/style.css
+++ b/Css/style.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Arial;
+  font-family:sans-serif;
 }
 
 /* header */
@@ -62,12 +62,13 @@
   border-bottom: 2px solid #8f6600;
   text-decoration: none;
   color: black;
-  font-family: "Roboto", sans-serif;
+  font-family: sans-serif;
   font-size: 15px;
   font-weight: 500;
   padding-top: 1%;
   padding-bottom: 1%;
   visibility: visible;
+  font-weight: bold;
 }
 
 .menuText:hover {
@@ -115,6 +116,7 @@ a:hover {
 .main {
   font-size: 14px;
   text-align: justify;
+  font-family: sans-serif;
 }
 
 .search {
@@ -253,6 +255,7 @@ a:hover {
 /*gallery*/
 
 .gallery {
+  padding-left: 1%;
   width: 100%;
 }
 
@@ -383,7 +386,7 @@ h2 {
 /*footer*/
 
 footer {
-  font-family: "Roboto", sans-serif;
+  font-family: sans-serif;
 }
 
 .footerBottom {
@@ -581,7 +584,7 @@ textarea.form-control {
     border-bottom: 2px solid #8f6600;
     text-decoration: none;
     color: black;
-    font-family: "Roboto", sans-serif;
+    font-family: sans-serif;
     font-size: 15px;
     font-weight: 500;
     padding-top: 1%;
@@ -614,7 +617,7 @@ textarea.form-control {
   .navMenu,
   li,
   a:hover {
-    color: #f5f6ce;
+    color: white;
     text-decoration: none;
   }
 
@@ -965,7 +968,7 @@ textarea.form-control {
   a {
     text-decoration: none;
     color: black;
-    font-family: "Roboto", sans-serif;
+    font-family: sans-serif;
     font-size: 20px;
     font-weight: 500;
     padding-top: 1%;
@@ -1011,7 +1014,7 @@ textarea.form-control {
   .navMenu,
   li,
   a:hover {
-    color: #f5f6ce;
+    color: white;
     text-decoration: none;
   }
 
