--- a/Css/style.css
+++ b/Css/style.css
@@ -415,7 +415,7 @@ footer {
 .footerBottom {
   padding-left: 1%;
   padding-top: 1%;
-  padding-bottom: 3%;
+  padding-bottom: 1%;
   padding-right: 1%;
   width: 100%;
   background-color: #333;
@@ -492,7 +492,6 @@ footer {
   float: left;
   font-size: 11px;
   color: gray;
-  /* position: absolute; */
   padding-top: 7%;
 }
 
@@ -844,7 +843,7 @@ textarea.form-control {
   .footerBottom {
     padding-left: 1%;
     padding-top: 1%;
-    padding-bottom: 3%;
+    padding-bottom: 5%;
     padding-right: 1%;
     width: 100%;
     background-color: #333;
@@ -854,11 +853,11 @@ textarea.form-control {
 
   .icondivFooter
   {
-    padding-left: 40%;
     padding-right: 1%;
     border-right: none;
     height: 80px;
     width: 100%;
+    text-align: center;
   }
   
   .iconFooter{
@@ -873,7 +872,8 @@ textarea.form-control {
     border-right: solid white 2px;  
     height: 80px;
     margin-top: 2%;
-    /* margin-left: 10%; */
+    width: 25%;
+    text-align: center;
   }
   
   .contactusFooter {
@@ -884,6 +884,8 @@ textarea.form-control {
     border-right: solid white 2px;
     height: 80px;
     margin-top: 2%;
+    width: 25%;
+    text-align: center;
   }
   
   .openFooter {
@@ -893,6 +895,8 @@ textarea.form-control {
     padding-right: 1%;
     height: 80px;
     margin-top: 2%;
+    width: 25%;
+    text-align: center;
   }
   
   .openFooterI {
@@ -903,24 +907,28 @@ textarea.form-control {
     border-right: none;
     height: 80px;
     margin-top: 2%;
-   
+    width: 25%;
+    text-align: center;
   }
   
   .suporteFooter
   {
     float: left;
     font-size: 14px;
-    /* margin-left: 35%; */
     border-right: none;
     height: 80px;
-    margin-top: 2%;
+    margin-top: 3%;
+    width: 100%;
+    text-align: center;
+    
   }
   
   .copyright {
     float: left;
     font-size: 11px;
     color: gray;
-    padding-top: 40%;
+    padding-top: 42%;
+    padding-bottom: 1%;
   }
   
   .desendesign {
@@ -928,9 +936,11 @@ textarea.form-control {
     float: left;
     font-size: 11px;
     color: gray;
-    padding-top: 40%;
+    padding-top: 42%;
     padding-left: 65%;
   }
+
+  /*EndFooter*/
 
   /*form*/
 
@@ -1199,7 +1209,7 @@ textarea.form-control {
   .footerBottom {
     padding-left: 1%;
     padding-top: 1%;
-    padding-bottom: 8%;
+    padding-bottom: 15%;
     padding-right: 1%;
     width: 100%;
     background-color: #333;
@@ -1207,47 +1217,93 @@ textarea.form-control {
     float: left;
   }
 
+  .icondivFooter
+  {
+    padding-left: 0px;
+    padding-right: 1%;
+    border-right: none;
+    height: 80px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .iconFooter{
+    height: 80px;
+    width: auto;
+  }
+  
   .wheretofindusFooter {
     float: left;
-    font-size: 13px;
-    padding-left: 0%;
-    padding-bottom: 3%;
+    font-size: 14px;
+    padding-right: 1%;
+    border-right: solid white 2px;  
+    height: 80px;
+    margin-top: 2%;
+    width: 50%;
+    text-align: center;
   }
-
+  
   .contactusFooter {
     float: left;
-    margin-left: 2%;
-    font-size: 13px;
-  }
-
-  .openFooter {
-    float: right;
     padding-left: 1%;
-    font-size: 13px;
-    padding-right: 0%;
+    padding-right: 1%;
+    border-right: none;
+    height: 80px;
+    margin-top: 2%;
+    width: 50%;
+    text-align: center;
   }
-
+  
+  .openFooter {
+    float: left;
+    padding-left: 1%;
+    font-size: 14px;
+    padding-right: 1%;
+    height: 80px;
+    width: 25%;
+    text-align: center;
+  }
+  
   .openFooterI {
-    float: right;
-    font-size: 13px;
+    float: left;
+    font-size: 14px;
+    padding-left: 1%;
+    padding-right: 1%;
+    border-right: none;
+    height: 80px;
+    margin-top: 2%;
+    width: 25%;
+    border-right: solid white 2px;
+    text-align: center;
   }
-
+  
+  .suporteFooter
+  {
+    float: left;
+    font-size: 14px;
+    /* margin-left: 35%; */
+    border-right: none;
+    height: 80px;
+    margin-top: 2%;
+    width: 50%;
+    text-align: center;
+  }
+  
   .copyright {
     float: left;
-    font-size: 11px;
-    color: gray;
     position: absolute;
-    padding-top: 18%;
-    padding-left: 8%;
+    padding-top: 58%;
+    padding-bottom: 1%;
+    width: 100%;
+    text-align: center;
   }
-
+  
   .desendesign {
     float: left;
-    font-size: 11px;
-    color: gray;
-    position: absolute;
-    padding-top: 22%;
-    padding-left: 25%;
+    padding-top: 62%;
+    padding-left: 0%;
+    width: 100%;
+    text-align: center;
   }
 
   /* form */
