--- a/Css/style.css
+++ b/Css/style.css
@@ -926,14 +926,24 @@ textarea.form-control {
   {
     float: left;
     font-size: 14px;
-    border-right: none;
+    border-right: solid white 2px;
     height: 80px;
     margin-top: 3%;
-    width: 100%;
+    width: 50%;
     text-align: center;
     
   }
   
+    .livrodereclamacoesFooter
+  {
+    margin-top: 3%;
+    float: left;
+    padding-left: 1%;
+    vertical-align: middle;
+    text-align: center;
+    width: 50%;
+  }
+
   .copyright {
     float: left;
     font-size: 11px;
@@ -1220,7 +1230,7 @@ textarea.form-control {
   .footerBottom {
     padding-left: 1%;
     padding-top: 1%;
-    padding-bottom: 15%;
+    padding-bottom: 10%;
     padding-right: 1%;
     width: 100%;
     background-color: #333;
@@ -1300,10 +1310,17 @@ textarea.form-control {
     text-align: center;
   }
   
+  .livrodereclamacoesFooter
+  {
+    margin-top: 3%;
+    text-align: center;
+    width: 100%;
+  }
+
   .copyright {
     float: left;
     position: absolute;
-    padding-top: 58%;
+    padding-top: 75%;
     padding-bottom: 1%;
     width: 100%;
     text-align: center;
@@ -1311,7 +1328,7 @@ textarea.form-control {
   
   .desendesign {
     float: left;
-    padding-top: 62%;
+    padding-top: 78%;
     padding-left: 0%;
     width: 100%;
     text-align: center;
