--- a/Css/style.css
+++ b/Css/style.css
@@ -203,6 +203,16 @@ a:hover {
   text-align: justify;
 }
 
+.productsCategories
+{
+
+}
+
+.productsCategoriesplaceHolders
+{
+  
+}
+
 /*Caroussel*/
 
 .marcass {
