--- a/Css/style.css
+++ b/Css/style.css
@@ -203,14 +203,47 @@ a:hover {
   text-align: justify;
 }
 
+.tittleProductCategory
+{
+  width: 100%;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+}
+
 .productsCategories
 {
-
+  text-align: center;
+  width: 100%;
+  
 }
 
 .productsCategoriesplaceHolders
 {
-  
+  float: left;
+  width: 25%;
+}
+
+.placeholder
+{
+  width: 100%;
+  height: 337px;
+}
+
+.placeholder:hover
+{
+  filter: blur(1.5px);
+  transition: 2s;
+}
+
+.categoriesIcons
+{
+  font-size: 40px;
+  z-index: 999999999999999999999;
+  position: absolute;
+  margin-left: -13.5%;
+  margin-top: 12.5%;
+  visibility: hidden;
 }
 
 /*Caroussel*/
