--- a/Css/style.css
+++ b/Css/style.css
@@ -220,8 +220,6 @@ a:hover {
   margin-right: 2.5%;
   margin-bottom: 1%;
   margin-top: 1%;
-  border-right: solid 1px white;
-  border-bottom: solid 1px white;
 }
 
 /* .placeholder {
@@ -236,24 +234,29 @@ a:hover {
 
 .categoriesIcons {
   font-size: 40px;
-  z-index: 999999999999999999999;
   position: absolute;
   color: white;
   margin-top: 10%;
   margin-left: -1.5%;
 }
 
-.categoriesIcons:hover {
+
+.tituloCategoria{
+  color: white;
+  font-weight: bold;
+  margin-top: 70%;
+}
+
+.productsCategoriesplaceHolders:hover .categoriesIcons {
   font-size: 80px;
   margin-left: -2.5%;
   margin-top: 7.5%;
   transition: 0.5s;
 }
 
-.tituloCategoria{
-  color: white;
-  font-weight: bold;
-  margin-top: 70%;
+.productsCategoriesplaceHolders:hover .tituloCategoria {
+  font-size: 30px;
+  transition: 0.5s;
 }
 
 /*Caroussel*/
