--- a/Css/style.css
+++ b/Css/style.css
@@ -9,14 +9,19 @@
   font-family: sans-serif;
 }
 
-/* header */
+a {
+  text-decoration: none;
+  color: black;
+}
+
+/*header*/
 
 .header {
   justify-content: space-between;
   background: #4a3302;
 }
 
-/* top */
+/*top*/
 
 .top {
   width: auto;
@@ -51,12 +56,12 @@
   position: absolute;
 }
 
-/* menu */
-
 .topBtnPhone {
   visibility: hidden;
   position: absolute;
 }
+
+/*menu*/
 
 .menuText {
   border-bottom: 2px solid #4a3302;
@@ -79,11 +84,6 @@
 .menuText:focus {
   border-bottom: 2px solid #fff;
   color: #fff;
-}
-
-a {
-  text-decoration: none;
-  color: black;
 }
 
 nav {
@@ -111,13 +111,39 @@ a:hover {
   text-decoration: none;
 }
 
-/* main */
+/*End menu*/
+
+/*End top*/
+
+/*main*/
 
 .main {
   font-size: 14px;
   text-align: justify;
   font-family: sans-serif;
 }
+
+.slideshow {
+  width: 100%;
+}
+
+.slideshowimgs {
+  width: 77%;
+  height: 500px;
+}
+
+.news {
+  float: right;
+  width: 23%;
+}
+
+.welcome {
+  margin-left: 1%;
+  width: 98%;
+  text-align: justify;
+}
+
+/*searchbar*/
 
 .search {
   position: absolute;
@@ -178,25 +204,9 @@ a:hover {
   outline: none;
 }
 
-.slideshow {
-  width: 100%;
-}
+/*End searchbar*/
 
-.slideshowimgs {
-  width: 77%;
-  height: 500px;
-}
-
-.news {
-  float: right;
-  width: 23%;
-}
-
-.welcome {
-  margin-left: 1%;
-  width: 98%;
-  text-align: justify;
-}
+/*produtos categorias*/
 
 .tittleProductCategory {
   width: 100%;
@@ -208,7 +218,6 @@ a:hover {
 .productsCategories {
   text-align: center;
   width: 100%;
-
 }
 
 .productsCategoriesplaceHolders {
@@ -230,7 +239,6 @@ a:hover {
   margin-top: 6%;
 }
 
-
 .tituloCategoria{
   color: white;
   font-weight: bold;
@@ -247,6 +255,8 @@ a:hover {
   font-size: 30px;
   transition: 0.5s;
 }
+
+/*End produtos categorias*/
 
 /*Caroussel*/
 
@@ -299,9 +309,9 @@ a:hover {
   }
 }
 
-/*End Caroussel*/
+/*End caroussel*/
 
-/*Marcas da pagina marcas*/
+/*marcas da pagina marcas*/
 
 .marcasGallery {
   width: 100%;
@@ -319,6 +329,8 @@ a:hover {
   padding-top: 1%;
   padding-bottom: 1%;
 }
+
+/*End marcas da pagina marcas*/
 
 /*gallery*/
 
@@ -348,6 +360,8 @@ a:hover {
   width: 100%;
   height: 100%;
 }
+
+/*End gallery*/
 
 /*ImageView*/
 /* The Modal (background) */
