--- a/Css/style.css
+++ b/Css/style.css
@@ -756,54 +756,27 @@ h2 {
     position: absolute;
   }
 
-    /*produtos categorias*/
-
-  .tittleProductCategory {
-    width: 100%;
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
-  }
-
-  .productsCategories {
-    text-align: center;
-    width: 100%;
-  }
+  /*produtos categorias*/
 
   .productsCategoriesplaceHolders {
-    width: 20%;
-    height: 269.8px;
-    float: left;
-    background-color: #4a3302;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-    margin-bottom: 1%;
-    margin-top: 1%;
+    height: 133px;
   }
 
   .categoriesIcons {
     font-size: 40px;
-    position: absolute;
-    color: white;
-    margin-left: -1.5%;
-    margin-top: 6%;
+    margin-left: -3%;
   }
 
   .tituloCategoria{
-    color: white;
-    font-weight: bold;
     margin-top: 70%;
   }
 
   .productsCategoriesplaceHolders:hover .categoriesIcons {
-    font-size: 80px;
-    margin-left: -3%;
-    transition: 0.5s;
+    font-size: 45px;
   }
 
   .productsCategoriesplaceHolders:hover .tituloCategoria {
-    font-size: 30px;
-    transition: 0.5s;
+    font-size: 16px;
   }
 
   /*End produtos categorias*/
@@ -898,37 +871,8 @@ h2 {
   .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
   }
+
   /*End ImageView*/
-
-  /*Marcas da pagina marcas*/
-
-  .marcasI {
-    visibility: hidden;
-    position: absolute;
-  }
-
-  .marcaI {
-    visibility: hidden;
-    position: absolute;
-  }
-
-  .marcasTabletI {
-    text-align: center;
-    display: inline-block;
-    width: 100%;
-    visibility: visible;
-    position: inherit;
-  }
-
-  .marcaTabletI {
-    display: inline-block;
-    width: 30%;
-    vertical-align: middle;
-    visibility: visible;
-    position: inherit;
-  }
-
-  /*Fim Marcas da pagina marcas*/
 
   .welcome {
     width: 98%;
@@ -1210,6 +1154,33 @@ h2 {
   .modal-content {
     margin-top: 20%;
   }
+
+  /*produtos categorias*/
+
+  .productsCategoriesplaceHolders {
+    height: 96.6px;
+  }
+
+  .categoriesIcons {
+    font-size: 40px;
+    margin-left: -4%;
+    margin-top: 3%;
+  }
+
+  .tituloCategoria{
+    margin-top: 70%;
+  }
+
+  .productsCategoriesplaceHolders:hover .categoriesIcons {
+    font-size: 45px;
+    margin-left: -4.5%;
+  }
+
+  .productsCategoriesplaceHolders:hover .tituloCategoria {
+    font-size: 12px;
+  }
+
+  /*End produtos categorias*/
 
   /* Position the "next button" to the right */
 
