--- a/Css/style.css
+++ b/Css/style.css
@@ -113,6 +113,12 @@ a:hover {
   text-decoration: none;
 }
 
+.downArrow
+{
+  font-size: 20px;
+  vertical-align: middle;
+}
+
 .dropDownProducsMenu
 {
   position: absolute;
